--- a/templates/indexAdmin.html
+++ b/templates/indexAdmin.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mediqu - Dashboard</title>
+    <title>TwoMove - Admin Dashboard</title>
     <link rel="stylesheet" href="../staticfiles/css/indexAdmin.css" />
     <link
       rel="stylesheet"
@@ -21,7 +21,7 @@
         <div class="logo-icon">
           <i class="fas fa-plus"></i>
         </div>
-        <span class="logo-text">mediqu</span>
+        <span class="logo-text">TwoMove</span>
       </div>
 
       <nav class="nav-menu">
